--- a/Projeto 2/index.html
+++ b/Projeto 2/index.html
@@ -24,10 +24,10 @@
               <img src="/assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa" />
             </a>
           </li>
-          <li>
+          <li class="desktop-only">
             <a href="#">Explorar</a>
           </li>
-          <li>
+          <li class="desktop-only">
             <a href="#">Minhas Viagens</a>
           </li>
           <li>
